Replace runners prefix amz2023.

--- a/.github/workflows/test-conda-cpu.yml
+++ b/.github/workflows/test-conda-cpu.yml
@@ -19,7 +19,7 @@ jobs:
       fail-fast: false
     uses: pytorch/test-infra/.github/workflows/linux_job.yml@main
     with:
-      runner: linux.12xlarge
+      runner: amz2023.linux.12xlarge
       repository: pytorch/captum
       script: |
         # Set up Environment Variables
