--- a/.github/workflows/test-pip-cpu-with-mypy.yml
+++ b/.github/workflows/test-pip-cpu-with-mypy.yml
@@ -16,7 +16,7 @@ jobs:
       fail-fast: false
     uses: pytorch/test-infra/.github/workflows/linux_job.yml@main
     with:
-      runner: linux.12xlarge
+      runner: amz2023.linux.12xlarge
       docker-image: cimg/python:3.11
       repository: pytorch/captum
       script: |
