--- a/.github/workflows/test-pip-cpu.yml
+++ b/.github/workflows/test-pip-cpu.yml
@@ -26,7 +26,7 @@ jobs:
       fail-fast: false
     uses: pytorch/test-infra/.github/workflows/linux_job.yml@main
     with:
-      runner: linux.12xlarge
+      runner: amz2023.linux.12xlarge
       docker-image: ${{ matrix.docker_img }}
       repository: pytorch/captum
       script: |
