--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -12,7 +12,7 @@ jobs:
   tests:
     uses: pytorch/test-infra/.github/workflows/linux_job.yml@main
     with:
-      runner: linux.12xlarge
+      runner: amz2023.linux.12xlarge
       docker-image: cimg/python:3.11
       repository: pytorch/captum
       script: |
