--- a/.conda/meta.yaml
+++ b/.conda/meta.yaml
@@ -16,7 +16,7 @@ requirements:
     - python>=3.9
     - setuptools
   run:
-    - numpy<2.0
+    - numpy
     - pytorch>=1.10
     - matplotlib-base
     - tqdm
